--- a/语言学/🥑1368个单词就够了-日英对照.md
+++ b/语言学/🥑1368个单词就够了-日英对照.md
@@ -4,126 +4,128 @@
 
 ## 1368个单词
 
+- https://ejje.weblio.jp/
 
 
-#### 具体名词：背下来就可以
 
-有关物的名词
+### 具体名词：背下来就可以
 
-时间类
+#### 有关物的名词
+
+##### 时间类
 
 - time
-  - 
+  - **時間**
 - morning
-  - 
+  - **朝、午前、夜明け**
 - afternoon
-  - 
+  - **午後**
 - noon
   - 
 - evening
-  - 
+  - **夕方、晩**
 - night
-  - 
+  - **夜、晩**
 - tonight
-  - 
+  - **今夜(は)**
 - today
-  - 
+  - **きょう(は)、本日(中に)、現今(では)、今日(は)、このごろは**
 - tomorrow
-  - 
+  - **あす、明日(は)、(近い)将来には**
 - yesterday
-  - 
+  - **きのう(は)、昨日は、つい最近、昨今、近ごろ**
 - weekend
-  - 
+  - **週末**
 - month
-  - 
+  - **1 か月**
 - year
-  - 
+  - **年、年間、1 年、年度、学年、…歳**
 - season
-  - 
+  - **季節**
 - spring
-  - 
+  - 春
+- summer
+  - **夏、夏季**
+  
 - autumn
-  - 
+  - **秋、秋季**
 - winter
-  - 
+  - **冬、冬季**
 - day
-  - 
+  - **1 日、一昼夜、日**
 - date
-  - 
+  - **日付**
 - moment
-  - 
+  - **瞬間、ちょっと(の間)、…した瞬間に、…するやいなや、時、時機、機会、場合、時、今**
 - period
-  - 
+  - **期間、時代、時期、段階、期、現代**
 - history
-  - 
+  - **歴史**
 - future
-  - 
+  - **未来、将来**
 - birthday
-  - 
+  - **誕生日**
 - holiday
-  - 
+  - **休日、休み、休業日、長い休暇、休暇期、祝日、祭日**
 - festival
-  - 
+  - **祭り、祝日**
 - schedule
-  - 
+  - **予定(表)、スケジュール、時間割り**
 - age
-  - 
+  - **年齢**
 
-
-气候类
+##### 气候类
 
 - weather
-  - 
+  - **天気**
 - rain
-  - 
+  - **雨**
 - snow
-  - 
+  - **雪**
 - wind
-  - 
+  - **(強い)風**
 - cloud
-  - 
+  - **雲**
 
-
-自然类
+##### 自然类
 
 - nature
-  - 
+  - **自然、天然**
 - mountain
-  - 
+  - **山**
 
 - air
-  - 
+  - **空気**
 - light
-  - 
+  - **光、光線、(目に映る)明るさ、光輝、輝き**
 - water
-  - 
+  - **水**
 - fire
-  - 
+  - **火**
 - ice
-  - 
+  - **氷**
 - smoke
-  - 
+  - **煙**
 - heat
-  - 
+  - **(温度上「冷たさ」に対して)熱さ、熱、(気温上「寒さ」に対して)暑さ、暑気、暖かさ、暖気、熱度、温度、(身体の)熱、体温**
 - ground
-  - 
+  - **地面、地(表)、土、土地、海底、水底、(特定の目的のための)場所、用地、…場、運動場**
 - sky
-  - 
+  - **空**
 - river
-  - 
+  - **川**
 - field
-  - 
+  - **野、原、畑、田畑**
 - forest
-  - 
+  - **森林**
 - sea
-  - 
+  - **海**
 - stone
-  - 
+  - **石**
 - star
-  - 
+  - **星**
 
-
-植物类
+##### 植物类
 
 - plant
   - 
@@ -135,8 +137,7 @@
 - crop
   - 
 
-
-动物类
+##### 动物类
 
 - animal
   - 
@@ -178,8 +179,7 @@
 - reptile
   - 
 
-
-昆虫类
+##### 昆虫类
 
 - insect
   - 
@@ -191,13 +191,12 @@
 - spider
   - 
 
-
-其他生物
+##### 其他生物
 
 - bacteria
   - 
 
-地点类
+##### 地点类
 
 - place
   - 
@@ -235,8 +234,7 @@
 - village city
   - 
 
-
-机构类
+##### 机构类
 
 - organization
   - 
@@ -246,8 +244,7 @@
 - charity
   - 
 
-
-声音类
+##### 声音类
 
 - sound
   - 
@@ -259,8 +256,7 @@
 - music
   - 
 
-
-食品类
+##### 食品类
 
 - food
   - 
@@ -290,8 +286,7 @@
 - sauce
   - 
 
-
-餐饮类
+##### 餐饮类
 
 - meal
   - 
@@ -303,8 +298,7 @@
 - dinner
   - 
 
-
-蔬菜类
+##### 蔬菜类
 
 - vegetable
   - 
@@ -320,8 +314,7 @@
 - bean
   - 
 
-
-水果类
+##### 水果类
 
 - fruit
   - 
@@ -333,8 +326,7 @@
 - banana
   - 
 
-
-食材类
+##### 食材类
 
 - ingredient
   - 
@@ -350,8 +342,7 @@
 - cream
   - 
 
-
-饮料类
+##### 饮料类
 
 - drink
   - 
@@ -371,8 +362,7 @@
 - alcohol
   - 
 
-
-营养类
+##### 营养类
 
 - nutrient
   - 
@@ -384,8 +374,7 @@
 - protein
   - 
 
-
-疾病类
+##### 疾病类
 
 - disease
   - 
@@ -397,8 +386,7 @@
 - cancer
   - 
 
-
-房屋类
+##### 房屋类
 
 - house
   - 
@@ -420,8 +408,7 @@
 - kitchen
   - 
 
-
-家具类
+##### 家具类
 
 - furniture
   - 
@@ -439,8 +426,7 @@
 - couch
   - 
 
-
-服装类
+##### 服装类
 
 - clothes
   - 
@@ -476,8 +462,7 @@
 - sock
   - 
 
-
-首饰类
+##### 首饰类
 
 - jewelry
   - 
@@ -487,8 +472,7 @@
 - ring
   - 
 
-
-化妆品
+##### 化妆品
 
 - cosmetics
   - 
@@ -500,8 +484,7 @@
 -  powder
   - 
 
-
-交通类
+##### 交通类
 
 - transport
   - 
@@ -519,8 +502,7 @@
 - train
   - 
 
-
-车辆类
+##### 车辆类
 
 - vehicle
   - 
@@ -544,24 +526,22 @@
 - wheel
   - 
 
-
-路桥类
+##### 路桥类
 
 - road
-  - 
+  - **道、道路、鉄道、街道、街**
 
 - street
-  - 
+  - **街路、通り、…街**
 - bridge
-  - 
+  - **橋**
 - station
-  - 
+  - **駅**
 
-
-装置类
+##### 装置类
 
 - device
-  - 
+  - **装置**
 
 - lock
   - 
@@ -574,11 +554,10 @@
 - tap
   - 
 
-
-设备类
+##### 设备类
 
 - equipment
-  - 
+  - **設備、用品、機器、器材**
 
 - shower
   - 
@@ -597,8 +576,7 @@
 - video
   - 
 
-
-容器类
+##### 容器类
 
 - container
   - 
@@ -624,11 +602,10 @@
 - pan
   - 
 
-
-材料类
+##### 材料类
 
 - material
-  - 
+  - **原料、材料**
 
 - cloth
   - 
@@ -637,7 +614,7 @@
 - glass
   - 
 - plastic
-  - 
+  - **プラスチック(**
 - gold
   - 
 - paint
@@ -645,8 +622,7 @@
 - chemical
   - 
 
-
-日常用品类
+##### 日常用品类
 
 - toy
   - 
@@ -726,8 +702,7 @@
 - pill
   - 
 
-
-数量
+##### 数量
 
 - couple
   - 
@@ -741,47 +716,44 @@
 - lot
   - 
 
-
-单位
+##### 单位
 
 - unit
-  - 
+  - **単位**
 
 - meter
-  - 
+  - **メートル**
 - inch
-  - 
+  - **インチ**
 - pound
   - 
 - gram
-  - 
+  - **グラム**
 - piece
-  - 
+  - **1 個、1 枚**
 
-
-事情
+##### 事情
 
 - thing
-  - 
+  - **(有形の)物、事物**
 
 - issue
-  - 
+  - **問題**
 - matter
-  - 
+  - **問題**
 - stuff
-  - 
+  - **(ものが作られている)材料、原料、資料、要素、素質**
 - object
-  - 
+  - **(知覚できる)物、物体、対象、目的、目標**
 - event
-  - 
+  - **(重要な)出来事、事件、行事、大事件**
 
+#### 有关人的名词
 
-有关人的名词
-
-家庭角色类
+##### 家庭角色类
 
 - parent
-  - 
+  - **親**
 
 - daughter
   - 
@@ -810,8 +782,7 @@
 - role
   - 
 
-
-社会角色类
+##### 社会角色类
 
 - kid
   - 
@@ -853,57 +824,55 @@
 - madam
   - 
 
-
-职业类
+##### 职业类
 
 - job
-  - 
+  - **仕事**
 
 - doctor
-  - 
+  - **医師**
 - nurse
-  - 
+  - **看護師**
 - professor
-  - 
+  - **教授**
 - lawyer
-  - 
+  - **弁護士**
 - engineer
-  - 
+  - **エンジニア**
 - teacher
-  - 
+  - **先生、教師**
 - coach
-  - 
+  - **コーチ、指導員**
 - guard
-  - 
+  - **守る**
 - judge
-  - 
+  - **審査**
 
-
-群体类
+##### 群体类
 
 - group
-  - 
+  - **グループ**
 
 - people
-  - 
+  - **人々**
 - class
-  - 
+  - **(共通の性質を有する)部類、種類、(学校の)クラス、学級、組、(クラスの)授業(時間)、(編物教室などの)講習、クラスの生徒たち、同期卒業生**
 - team
-  - 
+  - **チーム、組**
 - human
-  - 
+  - **人間**
 - staff
-  - 
+  - **職員**
 - society
-  - 
+  - **社会**
 - generation
-  - 
+  - **同時代の人々、族、一世代**
 - army
-  - 
+  - **軍隊**
 - government
-  - 
+  - **政府**
 - family
-  - 
+  - **家族**
 
 
 关于具体名词的解读
@@ -914,9 +883,9 @@
 
 
 
-#### 抽象名词：光背下来还不够
+### 抽象名词：光背下来还不够
 
-话语类
+##### 话语类
 
 - words
   - 
@@ -935,7 +904,7 @@
   - 
 - permission
 
-文字类
+##### 文字类
 
 - document
   - 
@@ -973,8 +942,7 @@
 - principle
   - 
 
-
-信息类
+##### 信息类
 
 - information
   - 
@@ -1004,8 +972,7 @@
 - knowledge
   - 
 
-
-状态类
+##### 状态类
 
 - state
   - 
@@ -1033,8 +1000,7 @@
 - opportunity
   - 
 
-
-行为类
+##### 行为类
 
 - act
   - 
@@ -1092,22 +1058,16 @@
 
 - duty
   - 
-
 - responsibility
   - 
-
 - fault
   - 
-
 - performance：
-
 - concert
   - 
-
 - opera
   - 
 - drama
-
 - study：
 - math
     - 
@@ -1121,7 +1081,7 @@
   - 
 - psychology
 
-arrangement：
+##### arrangement：
 
 - deal
     - 
@@ -1133,7 +1093,7 @@ arrangement：
   - 
 - engagement
 
-occasion：
+##### occasion：
 
 - meeting
     - 
@@ -1153,7 +1113,7 @@ occasion：
   - 
 - ceremony
 
-money：
+##### money：
 
 - profit
     - 
@@ -1182,8 +1142,7 @@ money：
 - budget
   - 
 
-
-活动类
+##### 活动类
 
 - activity
     - 
@@ -1209,7 +1168,7 @@ money：
   - 
 - industry
 
-sports：
+##### sports：
 
 - soccer
     - 
@@ -1224,8 +1183,7 @@ sports：
 - race
   - 
 
-
-思想类
+##### 思想类
 
 - thought
     - 
@@ -1240,8 +1198,7 @@ sports：
 - religion
   - 
 
-
-plan：
+##### plan：
 
 - strategy
     - 
@@ -1252,8 +1209,7 @@ plan：
 - program
   - 
 
-
-整体类
+##### 整体类
 
 - network
     - 
@@ -1266,8 +1222,8 @@ plan：
 - career
   - 
 
-
-system：
+- system
+  - 
 
 - language
     - 
@@ -1276,8 +1232,7 @@ system：
 - transport
   - 
 
-
-其他类
+##### 其他类
 
 - favor
     - 
@@ -1339,14 +1294,14 @@ system：
 
 
 
-#### 构成类名词：你的外在与内在
+### 构成类名词：你的外在与内在
 
-核心词
+##### 核心词
 
 - part
-  - 
+  - **(全体を構成する)部分、(…の)一部(分)、重要な部分、要素**
 
-部位
+##### 部位
 
 - side
     - 
@@ -1359,7 +1314,7 @@ system：
 - core
 - 
 
-身体
+##### 身体
 
 - head
     - 
@@ -1426,8 +1381,7 @@ system：
 - sweat
   - 
 
-
-精神
+##### 精神
 
 - mind
     - 
@@ -1440,8 +1394,7 @@ system：
 - emotion
   - 
 
-
-feeling：
+##### feeling：
 
 - shame
     - 
@@ -1458,8 +1411,7 @@ feeling：
 - sense
   - 
 
-
-力量
+##### 力量
 
 - strength
     - 
@@ -1468,13 +1420,14 @@ feeling：
 - force
   - 
 
-
-power：
+- power
+  - 
 
 - authority
   - 
 
-ability：
+- ability
+  - 
 
 - sight
     - 
@@ -1487,8 +1440,7 @@ ability：
 - skill
   - 
 
-
-动物
+##### 动物
 
 - tail
     - 
@@ -1497,8 +1449,7 @@ ability：
 - wing
   - 
 
-
-植物
+##### 植物
 
 - flower
     - 
@@ -1511,8 +1462,7 @@ ability：
 - branch
   - 
 
-
-其他
+##### 其他
 
 - whole
     - 
@@ -1532,11 +1482,11 @@ ability：
 
 
 
-#### 属性类名词：你的状态
+### 属性类名词：你的状态
 
-静态属性
+#### 静态属性
 
-形状
+##### 形状
 
 - shape
     - 
@@ -1545,8 +1495,7 @@ ability：
 - appearance
   - 
 
-
-尺寸
+##### 尺寸
 
 - size
     - 
@@ -1555,8 +1504,7 @@ ability：
 - space
   - 
 
-
-位置
+##### 位置
 
 - position
   - 
@@ -1600,7 +1548,7 @@ ability：
   - 
 - south
 
-品质
+##### 品质
 
 - quality
     - 
@@ -1613,8 +1561,7 @@ ability：
 - personality
   - 
 
-
-其他属性
+##### 其他属性
 
 - color
   - 
@@ -1631,7 +1578,7 @@ ability：
 - structure
   - 
 
-数量
+##### 数量
 
 - amount
     - 
@@ -1650,8 +1597,8 @@ ability：
 - temperature
   - 
 
-
-level：
+- level：等级
+  - 
 
 - degree
     - 
@@ -1663,7 +1610,8 @@ level：
   - 
 - standard
 
-rate：
+- rate：比率
+  - 
 
 - speed
     - 
@@ -1672,8 +1620,7 @@ rate：
 - percentage
   - 
 
-
-类别
+##### 类别
 
 - kind
     - 
@@ -1682,14 +1629,15 @@ rate：
 - type
   - 
 
+#### 动态属性
 
-动态属性
-
-方式
+##### 方式
 
 - form
+  - **形、形状、姿、姿態、外観、人影、物影、型、方式、種類**
 
-way：
+
+##### way：
 
 - behavior
     - 
@@ -1712,8 +1660,7 @@ way：
 - manner
   - 
 
-
-原因
+##### 原因
 
 - cause
     - 
@@ -1728,18 +1675,16 @@ way：
 - factor
   - 
 
-
-目的
+##### 目的
 
 - purpose
-    - 
+    - **目的、意図、(ものの使用の)用途、(目的達成への)決心、決意**
 
 
 - goal
-  - 
+  - **(努力・野心などの)目標、目的、目標、ゴール、目的地、行く先**
 
-
-结果
+##### 结果
 
 - effect
     - 
@@ -1748,8 +1693,7 @@ way：
 - result
   - 
 
-
-过程
+##### 过程
 
 - course
     - 
@@ -1767,9 +1711,9 @@ way：
 
 
 
-#### 单纯型动词：广交天下朋友
+### 单纯型动词：广交天下朋友
 
-本源词
+#### 本源词
 
 - be
     - 
@@ -1782,8 +1726,7 @@ way：
 - make
   - 
 
-
-归属
+#### 归属
 
 拥有某物　
 
@@ -1805,7 +1748,7 @@ way：
 - take
   - 
 
-终点位置
+#### 终点位置
 
 使到达某一位置　
 
@@ -1852,7 +1795,7 @@ way：
   - 
 - settle
 
-相互位置
+#### 相互位置
 
 一事物到另一事物上面　
 
@@ -1900,7 +1843,7 @@ way：
 - cross
   - 
 
-运动轨迹
+#### 运动轨迹
 
 从一个点到另一个点　
 
@@ -1967,8 +1910,7 @@ way：
 - screw
   - 
 
-
-速度
+#### 速度
 
 快速运动　
 
@@ -1981,8 +1923,7 @@ way：
 - hurry
   - 
 
-
-力量
+#### 力量
 
 轻轻接触　
 
@@ -2025,8 +1966,7 @@ way：
 - press
   - 
 
-
-空间
+#### 空间
 
 空间开放或关闭　
 
@@ -2105,10 +2045,9 @@ way：
 - set
   - 
 
+#### 时间
 
-时间
-
-某事发生　
+##### 某事发生　
 
 - begin
     - 
@@ -2119,27 +2058,26 @@ way：
 - happen
   - 
 
-
-某事结束　
+##### 某事结束　
 
 - finish
   - 
 
-某事停止　
+##### 某事停止　
 
 - stop
   - 
 
-方向
+#### 方向
 
 一个方向到另一个方向　
 
 - turn
   - 
 
-整体与部分
+#### 整体与部分
 
-从大到小（用力）　
+##### 从大到小（用力）　
 
 - break
     - 
@@ -2152,18 +2090,17 @@ way：
 - tear
   - 
 
-
-从大到小　
+##### 从大到小　
 
 - divide
   - 
 
-从多到少　
+##### 从多到少　
 
 - cut
   - 
 
-形状
+#### 形状
 
 - bend
     - 
@@ -2178,13 +2115,12 @@ way：
 - spread
   - 
 
-
-尺寸
+#### 尺寸
 
 - grow
   - 
 
-行为
+#### 行为
 
 - look
     - 
@@ -2219,23 +2155,23 @@ way：
 - do
   - 
 
-
-系动词
+#### 系动词
 
 - become
-    - 
+    - **(…に)なる**
 
 
 - seem
-  - 
+  - **(…と)見える、見える、思われる、らしい、(…が)ありそうに思える**
+  - **…のように思われる**
 - feel
-  - 
+  - **(身体で)感じる、感じる、感覚がある、(…が)感じる**
 - sound
-  - 
+  - **音、音響、声、調子、(声・言葉の)響き、感じ、印象、(意味のない)騒音、騒ぎ、ざわめき**
 - smell
-  - 
+  - **(…の)においがする、においがする**
 - taste
-  - 
+  - **味覚、味感、味、風味、少量、気味、あじ、経験、(個人的な)好み、趣味**
 
 
 关于单纯型动词的解读
@@ -2246,9 +2182,9 @@ way：
 
 
 
-#### 世故型动词：朋友少，但效率高
+### 世故型动词：朋友少，但效率高
 
-看
+#### 看
 
 - find
     - 
@@ -2264,9 +2200,9 @@ way：
   - 
 - show
 
-说
+#### 说
 
-意见：
+##### 意见：
 
 - agree
     - 
@@ -2279,8 +2215,7 @@ way：
 - allow
   - 
 
-
-告诉：
+##### 告诉：
 
 - claim
     - 
@@ -2296,7 +2231,7 @@ way：
   - 
 - confirm
 
-要求：
+##### 要求：
 
 - beg
     - 
@@ -2306,7 +2241,7 @@ way：
   - 
 - order
 
-带有情感地说：
+##### 带有情感地说：
 
 - argue
     - 
@@ -2328,7 +2263,7 @@ way：
   - 
 - threat
 
-其他：
+##### 其他：
 
 - answer
     - 
@@ -2341,8 +2276,7 @@ way：
 - pronounce
   - 
 
-
-想
+##### 想
 
 - consider
     - 
@@ -2429,8 +2363,7 @@ way：
 - attract
   - 
 
-
-感觉
+##### 感觉
 
 - enjoy
     - 
@@ -2465,8 +2398,7 @@ way：
 - disturb
   - 
 
-
-自然现象
+##### 自然现象
 
 - die
     - 
@@ -2479,10 +2411,9 @@ way：
 - boil
   - 
 
+#### 人体行为
 
-人体行为
-
-肢体：
+##### 肢体：
 
 - dance
     - 
@@ -2497,13 +2428,12 @@ way：
 - beat
   - 
 
-
-上肢：
+##### 上肢：
 
 - hug
   - 
 
-下肢：
+##### 下肢：
 
 - sit
     - 
@@ -2520,8 +2450,7 @@ way：
 - skip
   - 
 
-
-面部：
+##### 面部：
 
 - smile
     - 
@@ -2532,8 +2461,7 @@ way：
 - cry
   - 
 
-
-嘴巴：
+##### 嘴巴：
 
 - eat
     - 
@@ -2552,18 +2480,17 @@ way：
 - sing
   - 
 
-
-鼻子：
+##### 鼻子：
 
 - breathe
   - 
 
-皮肤：
+##### 皮肤：
 
 - bleed
   - 
 
-精神：
+##### 精神：
 
 - sleep
     - 
@@ -2574,8 +2501,7 @@ way：
 - relax
   - 
 
-
-健康：
+##### 健康：
 
 - hurt
     - 
@@ -2588,8 +2514,7 @@ way：
 - inject
   - 
 
-
-生活行为
+##### 生活行为
 
 - cook
     - 
@@ -2626,8 +2551,7 @@ way：
 - mark
   - 
 
-
-社会行为
+##### 社会行为
 
 - buy
     - 
@@ -2772,8 +2696,7 @@ way：
 - analyze
   - 
 
-
-运动
+##### 运动
 
 - skate
     - 
@@ -2786,8 +2709,7 @@ way：
 - shoot
   - 
 
-
-工作
+##### 工作
 
 - work
     - 
@@ -2804,8 +2726,7 @@ way：
 - retire
   - 
 
-
-学习
+##### 学习
 
 - read
     - 
@@ -2818,8 +2739,7 @@ way：
 - translate
   - 
 
-
-事物之间的关系
+##### 事物之间的关系
 
 - match
     - 
@@ -2842,8 +2762,7 @@ way：
 - involve
   - 
 
-
-事物的发展变化
+##### 事物的发展变化
 
 - change
     - 
@@ -2860,8 +2779,7 @@ way：
 - promote
   - 
 
-
-事物相互作用
+##### 事物相互作用
 
 - damage
     - 
@@ -2885,11 +2803,11 @@ way：
 
 
 
-#### 让感觉飞起来：形容词
+### 让感觉飞起来：形容词
 
-物的属性与构成
+#### 物的属性与构成
 
-大小
+##### 大小
 
 - big
     - 
@@ -2904,8 +2822,7 @@ way：
 - medium
   - 
 
-
-高低
+##### 高低
 
 - high
     - 
@@ -2914,8 +2831,7 @@ way：
 - low
   - 
 
-
-长短
+##### 长短
 
 - long
     - 
@@ -2926,8 +2842,7 @@ way：
 - tall
   - 
 
-
-深浅
+##### 深浅
 
 - deep
     - 
@@ -2936,8 +2851,7 @@ way：
 - shallow
   - 
 
-
-粗细
+##### 粗细
 
 - thick
     - 
@@ -2950,8 +2864,7 @@ way：
 - slim
   - 
 
-
-宽窄
+##### 宽窄
 
 - narrow
     - 
@@ -2960,8 +2873,7 @@ way：
 - wide
   - 
 
-
-重量
+##### 重量
 
 - heavy
     - 
@@ -2970,8 +2882,7 @@ way：
 - light
   - 
 
-
-正斜
+##### 正斜
 
 - straight
     - 
@@ -2982,8 +2893,7 @@ way：
 - flat
   - 
 
-
-形状
+##### 形状
 
 - round
     - 
@@ -2992,8 +2902,7 @@ way：
 - square
   - 
 
-
-距离
+##### 距离
 
 - near
     - 
@@ -3002,8 +2911,7 @@ way：
 - far
   - 
 
-
-事物与空间
+##### 事物与空间
 
 - full
     - 
@@ -3018,8 +2926,7 @@ way：
 - dirty
   - 
 
-
-时间
+##### 时间
 
 - new
     - 
@@ -3028,8 +2935,7 @@ way：
 - fresh
   - 
 
-
-数量
+##### 数量
 
 - extra
     - 
@@ -3048,8 +2954,7 @@ way：
 - total
   - 
 
-
-质地
+##### 质地
 
 - hard
     - 
@@ -3080,8 +2985,7 @@ way：
 - even
   - 
 
-
-力量
+##### 力量
 
 - strong
     - 
@@ -3098,8 +3002,7 @@ way：
 - tense
   - 
 
-
-状态
+##### 状态
 
 - liquid
     - 
@@ -3110,8 +3013,7 @@ way：
 - solid
   - 
 
-
-温度
+##### 温度
 
 - hot
     - 
@@ -3124,8 +3026,7 @@ way：
 - cool
   - 
 
-
-湿度
+##### 湿度
 
 - dry
     - 
@@ -3133,7 +3034,7 @@ way：
 
 - wet
 
-亮度
+##### 亮度
 
 - bright
     - 
@@ -3144,8 +3045,7 @@ way：
 - dull
   - 
 
-
-味道
+##### 味道
 
 - sweet
     - 
@@ -3170,10 +3070,9 @@ way：
 - quiet
   - 
 
+#### 人的属性与构成
 
-人的属性与构成
-
-时间
+##### 时间
 
 - young
     - 
@@ -3182,8 +3081,7 @@ way：
 - old
   - 
 
-
-身体
+##### 身体
 
 - hungry
     - 
@@ -3206,8 +3104,7 @@ way：
 - alive
   - 
 
-
-行为
+##### 行为
 
 - busy
     - 
@@ -3218,8 +3115,7 @@ way：
 - wild
   - 
 
-
-外表
+##### 外表
 
 - beautiful
     - 
@@ -3230,8 +3126,7 @@ way：
 - sexy
   - 
 
-
-心智
+##### 心智
 
 - smart
     - 
@@ -3252,8 +3147,7 @@ way：
 - patient
   - 
 
-
-态度
+##### 态度
 
 - polite
     - 
@@ -3270,8 +3164,7 @@ way：
 - aggressive
   - 
 
-
-情感
+##### 情感
 
 - interested
     - 
@@ -3286,8 +3179,7 @@ way：
 - confident
   - 
 
-
-心情
+##### 心情
 
 - happy
     - 
@@ -3324,10 +3216,9 @@ way：
 - lonely
   - 
 
+#### 事的属性与构成
 
-事的属性与构成
-
-难度
+##### 难度
 
 - easy
     - 
@@ -3338,11 +3229,10 @@ way：
 - difficult
   - 
 
-
-时间
+##### 时间
 
 - late
-    - 
+    - **(ある時刻に)遅れた、遅い、遅刻した**
 
 
 - due
@@ -3350,10 +3240,9 @@ way：
 - urgent
   - 
 - efficient
-  - 
+  - **効率的**
 
-
-可能性
+##### 可能性
 
 - possible
     - 
@@ -3362,8 +3251,7 @@ way：
 - available
   - 
 
-
-安全性
+##### 安全性
 
 - dangerous
     - 
@@ -3372,8 +3260,7 @@ way：
 - safe
   - 
 
-
-其他
+##### 其他
 
 - wrong
     - 
@@ -3392,10 +3279,9 @@ way：
 - successful
   - 
 
+#### 综合属性
 
-综合属性
-
-品质（好）
+##### 品质（好）
 
 - good
     - 
@@ -3416,8 +3302,7 @@ way：
 - excellent
   - 
 
-
-品质（坏）
+##### 品质（坏）
 
 - bad
     - 
@@ -3428,8 +3313,7 @@ way：
 - awful
   - 
 
-
-真实性
+##### 真实性
 
 - real
     - 
@@ -3442,13 +3326,12 @@ way：
 - fake
   - 
 
-
-完整性
+##### 完整性
 
 - complete
   - 
 
-精确性
+##### 精确性
 
 - exact
     - 
@@ -3457,8 +3340,7 @@ way：
 - specific
   - 
 
-
-复杂性
+##### 复杂性
 
 - complicated
     - 
@@ -3467,8 +3349,7 @@ way：
 - simple
   - 
 
-
-其他
+##### 其他
 
 - fun
     - 
@@ -3487,10 +3368,9 @@ way：
 - gross
   - 
 
+#### 事物关系
 
-事物关系
-
-特殊性
+##### 特殊性
 
 - special
     - 
@@ -3595,22 +3475,22 @@ way：
 
 
 
-#### 英语的灵魂：介词
+### 英语的灵魂：介词
 
-动态位置
+#### 动态位置
 
-轨迹
+##### 轨迹
 
 - across
     - 
 
 
 - along
-  - 
+  - **…に沿って**
 - past
   - 
 - over
-  - 
+  - **…を越えて**
 - up
   - 
 - down
@@ -3626,56 +3506,53 @@ way：
 - out
   - 
 - against
-  - 
+  - **…に反対して**
 
-
-起点
+##### 起点
 
 - from
-  - 
+  - **…から**
 
-终点
+##### 终点
 
 - to
-    - 
+    - **…まで、…へ、…に、…のほうに(当たって)、…に至るまで**
 
 
 - toward
-  - 
+  - **…のほうへ、…をさして、…のほうを向いて(いる)、…のほうへ(の)、…に向かって、…に対して(の)、…について(の)、…近く、…ころ**
 - for
-  - 
+  - **…のために、…にとって**
 - about
-  - 
+  - **…について(の)、…に関して、…に対して、…に従事して、…に取りかかって、…のあたりに、…の近くに、…のあちこちに、…の方々に、…ごろ(に)**
 
+#### 静态位置
 
-静态位置
-
-点
+##### 点
 
 - at
-  - 
+  - **…に、…で、…において**
 
-点与点
+##### 点与点
 
 - by
-    - 
+    - **…によって**
 
 
 - beside
-  - 
+  - **…のそばに**
 - before
-  - 
+  - **以前に**
 - after
-  - 
+  - **後に**
 - behind
-  - 
+  - **後ろに**
 - between
-  - 
+  - **の間に**
 - around
-  - 
+  - **周囲に、周りに**
 
-
-点与平面
+##### 点与平面
 
 - beyond
     - 
@@ -3688,91 +3565,75 @@ way：
 - below
   - 
 
-
-点与空间
+##### 点与空间
 
 - outside
-    - 
+    - **外部、外面、外側、(物事の)外観、表面**
 
 
 - inside
-  - 
+  - **内部、内側、**
 - within
-  - 
+  - **(時間・距離・範囲など)…以内で、…を越えずに、…の範囲内で、…の内に、…の中に**
 
-
-从属
+#### 从属
 
 - of
-    - 
+    - **…の**
 
 
 - with
-  - 
+  - **…とともに、…と一緒に、…を連れて、…を含んで、…と**
 - without
-  - 
+  - **…なしで**
 
-
-时间
+#### 时间
 
 - during
-    - 
+    - **ある特定の期間の間に**
 
 
 - since
-  - 
+  - **…以来**
 - till
-  - 
+  - **…まで**
 
+#### 替代
 
-替代
+- instead of
+    - **代わりに**
 
-- instead
-    - 
-
-
-- of
-  - 
-
-
-比较
+#### 比较
 
 - than
-    - 
+    - **…と比べて**
 
 
 - as
-  - 
+  - **(…と)同じ程度に、同様に、同じくらい**
 
-
-整体与部分
+#### 整体与部分
 
 - besides
-    - 
+    - **…のほかに(も)、…を除いて**
 
 
 - among
-  - 
+  - **…の間に、…の中で**
 - except
-  - 
+  - **…を（例外として）除いて**
 - including
-  - 
+  - **…を含めて、…込みで**
 
+#### 因果
 
-因果
+- according to
+    - **…によれば、…に従って、…により**
 
-- according
-    - 
-
-
-- to
-  - 
-
-
-其他
+#### 其他
 
 - despite
-    - 
+    - **…にもかかわらず**
 
 
 - per
@@ -3787,303 +3648,294 @@ way：
 
 
 
-#### 英语的配角：副词及其他
+### 英语的配角：副词及其他
 
-副词
+#### 副词
 
-时间
+##### 时间
 
 - now
-    - 
+    - **今、現在、今では(もう)、今すぐに、直ちに、たった今、今しがた、今や、そのとき**
 
 
 - early
-  - 
-- just
-  - 
+  - **(時間・時期的に)早く、(朝)早く、初期に、初めごろに、(予定した時刻より)早めに**
+- just now
+  - **ちょうど今、**
 - then
-  - 
+  - **(過去または未来の)その時(は)、あの時に(は)、その時には、その時、それから、その後で、また今度は、次には、そのうえ、さらにまた**
 - recently
-  - 
+  - **最近、近ごろ、このごろ**
 - ago
-  - 
+  - **(今より)…前に、以前に**
 - already
-  - 
+  - **すでに、もう、早くも、まさか**
 - yet
-  - 
+  - **まだ(…ない)、(今までのところでは)まだ(…ない)、まだしばらくは(…ない)、(今、またはその時)すでに、もう、今(まだ)、今なお、依然として、(その当時)まだ**
 - ever
-  - 
+  - **かつて、いつか、これまでに、かつて(…することがない)、決して(…ない)、いずれ、これまで、今まで、いつも、常に**
 - never
-  - 
+  - **いまだかつて…ない、一度も…しない、決して…ない、一つも…ない、まさか…ではあるまい、…でない**
 - forever
-  - 
+  - **永久に、絶えず、常に**
 
-
-位置
+##### 位置
 
 - here
-    - 
+    - **ここ**
 
 
 - there
-  - 
+  - **そこに、あそこに、あちらに、そこ、あそこ、そこの、そらあそこに、ほら、あれ**
 
-
-方向
+##### 方向
 
 - away
-    - 
+    - **離れて、向こうに(行って)、(遠く)離れて**
 
 
 - forth
-  - 
+  - **以後**
 - apart
-  - 
+  - **(時間・空間的に)離れて、別れて、別々に、離れて、離れ離れに**
 - together
-  - 
+  - **共に、一緒に**
 - aside
-  - 
+  - **わきへ、かたわらに、離れて、わきを向いて、わきぜりふで、(ある目的のために)別にして、とっておいて、考えないで、忘れて、(…は)別として**
 
-
-数量
+##### 数量
 
 - extra
-    - 
+    - **余分の**
 
 
 - alone
-  - 
+  - **ただひとりで、孤独で、ひとりで、孤立して、ただ…だけ、…のみ**
 
-
-程度
+##### 程度
 
 - quite
-    - 
+    - **まったく、すっかり、完全に、完全には…ではない、すっかり…ではない、並はずれた、たいした、(思ったより)かなり、なかなか、非常に**
 
 
 - much
-  - 
+  - **多くの、たくさんの、多量の**
 - very
-  - 
+  - **非常に、大いに、大変、ひどく、あまり(…ではない)、全然(…でない)、十分に、まったく、まさに**
 - well
-  - 
+  - **よく**
 - extremely
-  - 
+  - **極端に、きわめて、とても、すこぶる**
 - almost
-  - 
+  - **ほとんど、もう少しで、たいてい、だいたい、(実は違うが)…に近い、すんでのところで、…するばかりに、ほとんど…(でない)**
 - enough
-  - 
+  - **(通例数量が)十分な、必要なだけの、(…に)十分な、不足のない、十分な、足る**
 
-
-强调
+##### 强调
 
 - actually
-    - 
+    - **実際に、現に、実際は、実は、本当に、なんと**
 
 
 - especially
-  - 
+  - **特に、特別に**
 - absolutely
-  - 
+  - **絶対的に、無条件に、きっぱりと、完全に、まったく、全然(…ない)**
 - certainly
-  - 
+  - **確かに、きっと間違いなく、承知しました、もちろんです**
 
-
-速度
+##### 速度
 
 - fast
-    - 
+    - **速い、急速な、すばやい**
 
 
 - slow
-  - 
+  - **遅い**
 - soon
-  - 
+  - **まもなく、(もう)すぐ**
 - suddenly
-  - 
+  - **突然に**
 - immediately
-  - 
+  - **すぐに**
 - gradually
-  - 
+  - **徐々に**
 
+##### 频率
 
-频率
-
-- again
-    - 
+- again/repeat
+    - **再び、また、重ねて**
+    - **繰り返す、繰り返して言う、重ねて言う**
 
 
 - often
-  - 
+  - **しばしば、たびたび、よく、多くの場合、よくあることだが**
 - usually
-  - 
+  - **通例、通常、普通に、一般に**
 - always
-  - 
+  - **常に、いつでも、いつまでも**
 
-
-顺序
+##### 顺序
 
 - finally
-    - 
+    - **最後に、ついに、最終的に**
 
 
 - eventually
-  - 
+  - **結局は、ついに(は)、やがて(は)**
 
+##### 转折
 
-转折
-
+- however
+  - **しかしながら、けれども、とはいえ、どんなに…でも**
+  
 - otherwise
-  - 
+  - **別な方法で(は)、ほかの状態に、さもなければ、その他の点で**
 
-可能性
+##### 可能性
 
 - probably
-    - 
+    - **たぶん、おそらく**
 
 
 - perhaps
-  - 
+  - **ことによると、あるいは、たぶん、もしかして**
 - maybe
-  - 
+  - **ことによると、たぶん、もしかしたら**
 
-
-递进
+##### 递进
 
 - also
-    - 
+    - **また**
 
 
 - too
-  - 
+  - **(…も)また、そのうえ、しかも、ところが、本当は**
 - either
-  - 
+  - **(二者のうちの)どちらかの一方の、どちらの…でも、(二者のうちの)どちらの…も、(二者のうちの)どちらかの…、両方の**
 - neither
-  - 
+  - **(二者のうちの)どちらの…も…でない**
 - else
-  - 
+  - **そのほかの、他の**
 
-
-引导
+##### 引导
 
 - when
-    - 
+    - **いつ**
 
 
 - where
-  - 
+  - **どこに**
 - how
-  - 
+  - **どう**
 - why
-  - 
+  - **(疑問副詞) なぜ、どうして**
 - what
-  - 
+  - **何、どんなもの、何もの、どれほど**
 
+#### 连词
 
-连词
-
-因果
+##### 因果
 
 - because
-  - 
+  - **なぜなら、というのは、(なぜなら)…だから(である)、…だから、…なので**
 
-转折
+##### 转折
 
 - but
-    - 
+    - **しかし**
 
 
 - though
-  - 
+  - **…にもかかわらず**
 
-
-并列
+##### 并列
 
 - and
-  - 
+  - **…と…、および、そして**
 
-条件
+##### 条件
 
 - if
-    - 
+    - **もしも…ならば、…とすれば、たとえ…としても、…ではあるが、…としても、…の時はいつでも、…かどうか**
 
 
 - unless
-  - 
+  - **…でない限り**
 - except
-  - 
+  - **…を除いては、…のほかは、…する以外(は)、…(の場合)以外では、…でなければ**
 
-
-时间
+##### 时间
 
 - while
-  - 
+  - **…する間、…するうち、…と同時に、…する限り、同時に**
 
-选择
+##### 选择
 
 - or
-    - 
+    - **または、あるいは、…か…か、**
 
 
 - whether
-  - 
+  - **…かどうか、**
 
+#### 限定词
 
-限定词
-
-顺序
+##### 顺序
 
 - last
-    - 
+    - **最後**
 
 
 - next
-  - 
+  - **次の、来…、最も近い**
 
-
-数量
+##### 数量
 
 - all
-    - 
+    - **全体の、全部の、全…、あらゆる、すべての**
 
 
 - any
-  - 
+  - **どんな…でも、どれでも…、だれでも…、任意の…、どれほどの…でも、無限の、いくらでも、いくつでも、すべての、少しも(…ない)**
 - some
-  - 
+  - **いくらかの、多少の、少しの、いくらか、多少**
 - both
-  - 
+  - **両者の、両方の、双方の**
 - each
-  - 
+  - **おのおのの、めいめいの、各自の、各…**
 - either
-  - 
+  - **（２つのうちの）どちらか一方の**
 - neither
-  - 
+  - **(二者のうちの)どちらの…も…でない**
 - every
-  - 
+  - **それぞれ**
 - few
-  - 
+  - **ほとんどない、少数しかない**
 - many
-  - 
+  - **多くの、たくさんの**
 - much
 
-指代
+  - **多くの、たくさんの**
+
+
+##### 指代
 
 - this
-    - 
+    - **この、これ**
 
 
 - that
-  - 
+  - **その**
 - these
-  - 
+  - **これらの**
 - those
-  - 
+  - **それらの**
 - another
-  - 
+  - **もう一つの、別の、ほかの**
 - such
 
-代词
+##### 代词
 
 - I
     - 
@@ -4102,18 +3954,16 @@ way：
 - it
   - 
 
-
-疑问代词
+##### 疑问代词
 
 - which
-    - 
+    - **(疑問代名詞) どちら、どれ、どの人**
 
 
 - who
-  - 
+  - **だれが、どの人、どんな人**
 
-
-冠词
+##### 冠词
 
 - a
     - 
@@ -4123,7 +3973,10 @@ way：
   - 
 - the
 
-感叹词
+  - **その**
+
+
+##### 感叹词
 
 - bye
     - 
@@ -4143,7 +3996,10 @@ way：
   - 
 - damn
 
-缩略词
+  - 
+
+
+##### 缩略词
 
 - Mr.
     - 
@@ -4152,8 +4008,7 @@ way：
 - Ms.
   - 
 
-
-数词
+##### 数词
 
 - zero
     - 
